k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pocketgull-service
  namespace: pocketgull-production
  labels:
    app.kubernetes.io/name: pocketgull-app
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: pocketgull-app
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
